WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310113
[IFC] Crash in Content::lineEllipsis during partial layout with ellipsis content
https://bugs.webkit.org/show_bug.cgi?id=310113
Summary
[IFC] Crash in Content::lineEllipsis during partial layout with ellipsis content
Ruthvik Konda
Reported
2026-03-17 10:48:51 PDT
[IFC] Crash in Content::lineEllipsis during partial layout with ellipsis content
Attachments
Add attachment
proposed patch, testcase, etc.
Ruthvik Konda
Comment 1
2026-03-17 10:49:14 PDT
rdar://172267326
Ruthvik Konda
Comment 2
2026-03-17 10:52:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60785
EWS
Comment 3
2026-03-22 19:08:05 PDT
Committed
309723@main
(d575073e742c): <
https://commits.webkit.org/309723@main
> Reviewed commits have been landed. Closing PR #60785 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug