Cherry-pick 309723@main (d575073e742c). https://bugs.webkit.org/show_bug.cgi?id=310113

[IFC] Crash in Content::lineEllipsis during partial layout with ellipsis content
    https://bugs.webkit.org/show_bug.cgi?id=310113
    rdar://172267326

    Reviewed by Alan Baradlay.

    Content::append() did not grow the lineEllipses vector to match the existing
    line count when the vector already existed but was shorter. This caused a
    misalignment between line indices and ellipsis data positions after a
    FullFromDamage partial layout update, leading to a crash at paint time.

    Also add a graceful recovery in LineBoxIteratorModernPath::lineEllipsis() so
    that a missing ellipsis entry does not crash the process.

    Test: fast/inline/inline-content-with-ellipsis-after-partial-layout-append-crash.html

    * LayoutTests/fast/inline/inline-content-with-ellipsis-after-partial-layout-append-crash-expected.txt: Added.
    * LayoutTests/fast/inline/inline-content-with-ellipsis-after-partial-layout-append-crash.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContent.cpp:
    (WebCore::InlineDisplay::Content::append):
    * Source/WebCore/layout/integration/inline/InlineIteratorLineBoxModernPath.h:
    (WebCore::InlineIterator::LineBoxIteratorModernPath::lineEllipsis const):

    Canonical link: https://commits.webkit.org/309723@main

Canonical link: https://commits.webkit.org/305877.339@webkitglib/2.52